# Data-Preprocessing-and-Advanced-analytics-plateform-with-dashboard-integration

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEVOPS_SETUP_AND_TESTING.md  Dockerfile  Makefile  TECHNICAL_PROJECT_REPORT_FR.md  docker-compose.yml  myapp.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  verify_ml.py
.github/workflows/: cd.yml  ci.yml  main.yml
config/: logging_config.py  settings.py
src/analytics/: __init__.py  advanced_analytics.py  ml_models.py  statistical.py
src/data_processing/: cleaner.py  cleaner1.py  loader.py  oldcleaner.py  transformer.py
src/utils/: dataframe_utils.py
src/visualization/: __init__.py  charts.py  dashboard.py  reports.py
tests/: __init__.py  conftest.py  test_cleaner.py  test_loader.py  test_ml_models.py  test_statistical.py  test_transformer.py  test_visualization.py
